Fixes #7; Sanitizes social links; fixes overlap of menu & social

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -562,9 +562,8 @@ textarea {
 .main-navigation {
     clear: both;
     display: block;
-    position: absolute;
+    position: relative;
     top: 0;
-    float: right;
     color: white;
     width: 100%;
     z-index: 2;
